Fixed article.njk and main.css to text-transform: none. This makes blog posts look better. Still need to work on the font type to make it more readable.

--- a/finalDesign/assets/css/main.css
+++ b/finalDesign/assets/css/main.css
@@ -3841,6 +3841,16 @@ input, select, textarea {
 			#main > header p a {
 				color: inherit;
 			}
+			
+			.blogText {
+				margin: 0;
+				padding: 0;
+				border: 0;
+				font-size: 100%;
+				font: inherit;
+				text-transform: none;
+				vertical-align: baseline;
+			}
 
 		@media screen and (max-width: 1680px) {
 
